src/objects/DMA__c.object
<CustomObject>
    <description>Designated Market Areas defined by Postal Code, City and State.</description>
    <fields>
        <fullName>CityStateConcatenatedKey__c</fullName>
        <description>Used to find unique combinations of city and state.</description>
        <formula>City__c + $Setup.DataGenerationSettings__c.CombinedKeyDelimiter__c + State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unique combination of City:State.</inlineHelpText>
        <label>City State Concatenated Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <inlineHelpText>Code for the DMA</inlineHelpText>
        <label>Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <inlineHelpText>The Actual Designated Market Area.</inlineHelpText>
        <label>DMA</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <inlineHelpText>Postal / Zip Code that this DMA represents.</inlineHelpText>
        <label>Postal Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>State / Province Abbreviation</inlineHelpText>
        <label>State</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DMA</label>
    <nameField>
        <label>DMA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DMAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>